--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "globe-react-native-ui-library",
-  "version": "1.3.0-local.11",
+  "version": "1.3.0",
   "description": "Globe React Native UI Library",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
