--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     ]
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.7.0",
     "react-native-modal-datetime-picker": "^17.1.0"
   }
 }
