--- a/package.json
+++ b/package.json
@@ -155,5 +155,10 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "react-native-modal-datetime-picker": "^17.1.0"
   }
 }
