--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,14 @@
   "compilerOptions": {
     "rootDir": ".",
     "paths": {
-      "globe-react-native-ui-library": [
-        "./src/index"
-      ]
+      "globe-react-native-ui-library": ["./src/index"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "lib": [
-      "esnext"
-    ],
+    "lib": ["esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -28,6 +24,5 @@
     "strict": true,
     "target": "esnext",
     "verbatimModuleSyntax": true
-  },
-  "extends": "expo/tsconfig.base"
+  }
 }
