--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-builder-bob": "^0.20.0",
+    "react-test-renderer": "^18.3.1",
     "release-it": "^15.0.0",
     "typescript": "^5.2.2"
   },
@@ -155,5 +156,8 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "@testing-library/react-native": "^12.5.1"
   }
 }
